--- a/U13_A3/givefeedback.html
+++ b/U13_A3/givefeedback.html
@@ -51,8 +51,8 @@ p {color: #00ff00ff;}
 <p>
 <a href="index.html"><img src="mobile_phone_website_images/Home_Button_Small.jpg" alt="Home page hyperlink"></a> 
 <a href="phones.html"><img src="mobile_phone_website_images/Phone_Button_Small.jpg" alt="Phone page hyperlink"></a>
-<a href="simcards.html"><img src="mobile_phone_website_images/Sim_Button_Small.jpg" alt="Sim Cards page hyperlink"></a> 
-<a href="phonecases.html"><img src="mobile_phone_website_images/Cases_Button_Small.jpg" alt="Phone Cases page hyperlink"></a>
+<a href="Sims.html"><img src="mobile_phone_website_images/Sim_Button_Small.jpg" alt="Sim Cards page hyperlink"></a> 
+<a href="Cases.html"><img src="mobile_phone_website_images/Cases_Button_Small.jpg" alt="Phone Cases page hyperlink"></a>
 <a href="accessories.html"><img src="mobile_phone_website_images/Accessories_Button_Small.jpg" alt="Phone Accessories page hyperlink"></a>
 </p>
 
