--- a/U13_A3/contactus.html
+++ b/U13_A3/contactus.html
@@ -84,9 +84,12 @@ document.write('<p>Good evening visitor! Thank you for choosing to contact us ov
 <div class="row">
   <div class="column" style="background-color:#000000;">
     <p>If you have questions about our website that we didn't cover on the "About Us" page then please contact us via this E-mail link:</p>
-	<a href= "mailto:22143300@cambria.ac.uk">22143300@cambria.ac.uk</a>
+	<a href="mailto:22143300@cambria.ac.uk">22143300@cambria.ac.uk</a>
 <p>Or if you would prefer to speak to someone over the phone then please call this number:</p>
 <a href="tel:44-637-782-273">44-637-782-273</a>
+<p>Alternatively, if you have a question about one of our products that we haven't or cannot answer, then try the following links to some forums:</p>
+<a href="https://discussions.apple.com/welcome"><img src="mobile_phone_website_images/Black_Apple_Logo.jpg" alt="Link to Apple Forums Website"><a/>
+<a href="https://eu.community.samsung.com/t5/english/ct-p/uk?page=1&tab=setting:samsung.featured_topics"><img src="mobile_phone_website_images/Black_Samsung_Logo.jpg" alt="Link to Samsung Forums Website"></a>
   </div>
   <div class="column" style="background-color:#000000;">
     <p><a href="https://x.com/?lang=en"><img src="mobile_phone_website_images/X_Logo.jpg" alt="Link to X/Twitter Page"></a>
