--- a/U3_A2/unit1.html
+++ b/U3_A2/unit1.html
@@ -94,7 +94,7 @@ width: 100%;
 
 <div class="row">
   <div class="column left" style="background-color:#ffffff;">
-    <p><img src="U3_Images/Unit1work.jpg" alt="Picture of myself"> </p>
+    <p><img src="U3_Images/Unit1Work.jpg" alt="Picture of myself"> </p>
   </div>
   <div class="column middle" style="background-color:#ffffff;">
     <p>In unit 1 I had to learn the basics of computing, such as different cables, ways of transmitting data, different waying of communicating over the internet like VoIP and social medias. While the actual courseowkr was only a test i had to do a lot of revision and preperations for the test</p>
