--- a/U3_A2/unit2.html
+++ b/U3_A2/unit2.html
@@ -6,13 +6,13 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Unit 1</title>
+<title>Unit 2</title>
 
 </head>
 
 <body> 
 
-<img src="U3_Images/Unit2banner.jpg" alt="My Portfolio"> 
+<img src="U3_Images/Unit2Banner.jpg" alt="My Portfolio"> 
 
 <style>
 
@@ -94,7 +94,7 @@ width: 100%;
 
 <div class="row">
   <div class="column left" style="background-color:#ffffff;">
-    <p><img src="U3_Images/Unit2work.jpg" alt="Picture of my work in unit 2"> </p>
+    <p><img src="U3_Images/Unit2Work.jpg" alt="Picture of my work in unit 2"> </p>
   </div>
   <div class="column middle" style="background-color:#ffffff;">
     <p>In Unit 2 I had to learn about things such as data storage and the technology that goes into computer like CPU, GPU, adaptors, ect. We also learnt about data protection and encryption which was incredibly interesting to learn about. All in preperation to take a test to get my grade for the unit.</p>
