--- a/U3_A2/unit2.html
+++ b/U3_A2/unit2.html
@@ -12,7 +12,7 @@
 
 <body> 
 
-<img src="U3_Images/Unit2Banner.jpg" alt="My Portfolio"> 
+<img src="U3_Images/Unit2Banner.jpg" alt="Unit 2"> 
 
 <style>
 
@@ -26,11 +26,11 @@ margin-right:auto;
 
 margin-left:auto;}
 
-h1 {color: #0eb505;}
+h1 {color: #699662;}
 
 h2 {color: #161716;}
 
-p {color: #00ff00ff;}
+p {color: #242e24;}
 
 
 a:link {
