--- a/U3_A2/Unit8evidence.html
+++ b/U3_A2/Unit8evidence.html
@@ -26,11 +26,11 @@ margin-right:auto;
 
 margin-left:auto;}
 
-h1 {color: #0eb505;}
+h1 {color: #699662;}
 
 h2 {color: #161716;}
 
-p {color: #00ff00ff;}
+p {color: #242e24;}
 
 
 a:link {
