--- a/U3_A2/unit8.html
+++ b/U3_A2/unit8.html
@@ -26,11 +26,11 @@ margin-right:auto;
 
 margin-left:auto;}
 
-h1 {color: #0eb505;}
+h1 {color: #699662;}
 
 h2 {color: #161716;}
 
-p {color: #00ff00ff;}
+p {color: #242e24;}
 
 
 a:link {
@@ -94,7 +94,7 @@ width: 100%;
 
 <div class="row">
   <div class="column left" style="background-color:#ffffff;">
-    <p><a href="Unit8evidence.html"><img src="U3_Images/Unit8work.jpg" alt="Link to my evidence page."></a>  </p>
+    <p><a href="Unit8evidence.html"><img src="U3_Images/Unit8work.jpg" alt="Link to my evidence page."></a> Click image to go to evidence page. </p>
   </div>
   <div class="column middle" style="background-color:#ffffff;">
     <p>In Unit 8 I had to design and create a Mobile app that would be used to teach children how to say and write the letters of the alphabet. The app prompt was fairly simple and i was able to find/create the assets fairly easily, though per usual i didn't enjoy the written work as much as the coding. </p>
